--- a/requirements.txt
+++ b/requirements.txt
@@ -17,9 +17,9 @@ python-dotenv==1.1.1
 requests==2.32.5
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
-#rfdetr==1.4.1
-ultralytics==8.4.14
-ultralytics-thop==2.0.18
+rfdetr==1.4.1
+#ultralytics==8.4.14
+#ultralytics-thop==2.0.18
 sentence-transformers==5.2.2
 streamlit==1.53.1
 types-requests==2.32.4.20260107
