use rfdetr instead of yolo

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,13 +18,14 @@ python-dotenv
 requests
 requests-oauthlib
 requests-toolbelt
-opencv-python-headless
-#rfdetr
-ultralytics
-ultralytics-thop
+rfdetr
+#ultralytics
+#ultralytics-thop
 sentence-transformers
 streamlit
 types-requests
 wikipedia
 wordcloud
 gunicorn
+numpy
+opencv-python-headless
