--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,30 @@
-numpy
-opencv-python-headless
-composio
-composio-client
-composio-openai-agents
-crewai
-crewai-tools
-gdown
-langchain
-langchain-community
-langchain-core
-langchain-openai
-langchain-pinecone
-langchain-tavily
-langchain-text-splitters
-google-genai
-pillow
-pillow-avif-plugin
-python-dotenv
-requests
-requests-oauthlib
-requests-toolbelt
-torch==2.0.1
-rfdetr
-#ultralytics
-#ultralytics-thop
-sentence-transformers
-streamlit
-types-requests
-wikipedia
-wordcloud
-gunicorn
+composio==0.11.0
+composio-client==1.27.0
+composio-openai-agents==0.11.0
+crewai==1.9.2
+crewai-tools==1.9.2
+gdown==5.2.1
+langchain==0.3.27
+langchain-community==0.3.31
+langchain-core==0.3.83
+langchain-openai==0.3.23
+langchain-pinecone==0.2.13
+langchain-tavily==0.2.17
+langchain-text-splitters==0.3.11
+google-genai==1.49.0
+pillow==12.1.0
+pillow-avif-plugin==1.5.2
+python-dotenv==1.1.1
+requests==2.32.5
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+#rfdetr==1.4.1
+#ultralytics==8.4.14
+#ultralytics-thop==2.0.18
+sentence-transformers==5.2.2
+streamlit==1.53.1
+types-requests==2.32.4.20260107
+wikipedia==1.4.0
+wordcloud==1.9.6
+#gunicorn==21.2.0
+#opencv-python-headless==4.9.0.80
